--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,5 +1,8 @@
  Vagrant.configure("2") do |config|
  	config.vm.box = "bento/ubuntu-20.04"
+
+	config.vm.network "private_network", type: "dhcp",
+	 	name: "vboxnet0"
 	
 	#config.vm.network "forwarded_port", guest: 9200, host: 9200
 	#config.vm.network "forwarded_port", guest: 9100, host: 9100
@@ -9,5 +12,13 @@
 		v.memory = 2048
 		v.cpus = 2
 		v.name = "devops20-vm01"
+	end
+
+	config.vm.provision "shell" do |s|
+		ssh_pub_key = File.readlines("/home/vmedvedev/.ssh/id_rsa.pub").first.strip
+		s.inline = <<-SHELL
+		echo #{ssh_pub_key} >> /home/vagrant/.ssh/authorized_keys
+		echo #{ssh_pub_key} >> /root/.ssh/authorized_keys
+		SHELL
 	end
  end
