--- a/ansible/8.3/site.yml
+++ b/ansible/8.3/site.yml
@@ -72,7 +72,7 @@
       tags: elastic
 
 - name: Install Vector
-  hosts: elasticsearch
+  hosts: vector
   tasks:
     - name: Download Vector
       ansible.builtin.get_url:
@@ -106,3 +106,32 @@
         src: templates/vector.sh.j2
         dest: /etc/profile.d/vector.sh
       tags: vector
+
+- name: Install lighthouse
+  hosts: lighthouse
+  tasks:
+    - name: Install nginx
+        become: true
+        ansible.builtin.package:
+          name: nginx-1.18.0-0ubuntu1.4
+         state: present
+       tags: lighthouse  
+
+    - name: Download lighthouse
+        ansible.builtin.get_url: 
+          url: https://github.com/VKCOM/lighthouse/archive/refs/heads/master.zip
+          dest: "/tmp/lighthouse_master.zip"
+          mode: 0755
+          timeout: 60
+          force: true
+          validate_certs: false
+        tags: lighthouse
+
+    - name: Unarchive lighthouse
+        ansible.builtin.unarchive:
+          copy: false
+          src: "https://github.com/VKCOM/lighthouse/archive/refs/heads/master.zip"
+          dest: "{{ lighthouse_home }}"
+          # extra_opts: [--strip-components=2]
+          # creates: "{{ vector_home }}/bin/vector"
+        tags: lighthouse
