--- a/ansible/8.3/inventory/prod.yml
+++ b/ansible/8.3/inventory/prod.yml
@@ -1,10 +1,5 @@
 ---
-# vector
-# lighthouse
-
-elasticsearch:
+clickhouse:
   hosts:
-    devops20-vm01:
-      ansible_connection: ssh
-      ansible_user: vagrant
-      ansible_host: 192.168.56.3
+    clickhouse-01:
+      ansible_host: <IP_here>
