--- a/ansible/8.3/site.yml
+++ b/ansible/8.3/site.yml
@@ -32,3 +32,68 @@
       register: create_db
       failed_when: create_db.rc != 0 and create_db.rc !=82
       changed_when: create_db.rc == 0
+
+- name: Install Vector
+  hosts: vector
+  tasks:
+    - name: Download Vector
+      ansible.builtin.get_url:
+        url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
+        dest: "/tmp/vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
+        mode: 0755
+        timeout: 60
+        force: true
+        validate_certs: false
+      register: get_vector
+      until: get_vector is succeeded
+      tags: vector
+    - name: Create vector home dir
+      become: true
+      ansible.builtin.file:
+        state: directory
+        path: "{{ vector_home }}"
+      tags: vector
+    - name: Extract vector to home dir
+      become: true
+      ansible.builtin.unarchive:
+        copy: false
+        src: "/tmp/vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
+        dest: "{{ vector_home }}"
+        extra_opts: [--strip-components=2]
+        creates: "{{ vector_home }}/bin/vector"
+      tags: vector
+    - name: Set environment Vector
+      become: true
+      ansible.builtin.template:
+        src: templates/vector.sh.j2
+        dest: /etc/profile.d/vector.sh
+      tags: vector
+
+- name: Install lighthouse
+  hosts: lighthouse
+  tasks:
+    - name: Install nginx
+        become: true
+        ansible.builtin.package:
+          name: nginx-1.18.0-0ubuntu1.4
+         state: present
+       tags: lighthouse  
+
+    - name: Download lighthouse
+        ansible.builtin.get_url: 
+          url: https://github.com/VKCOM/lighthouse/archive/refs/heads/master.zip
+          dest: "/tmp/lighthouse_master.zip"
+          mode: 0755
+          timeout: 60
+          force: true
+          validate_certs: false
+        tags: lighthouse
+
+    - name: Unarchive lighthouse
+        ansible.builtin.unarchive:
+          copy: false
+          src: "https://github.com/VKCOM/lighthouse/archive/refs/heads/master.zip"
+          dest: "{{ lighthouse_home }}"
+          # extra_opts: [--strip-components=2]
+          # creates: "{{ vector_home }}/bin/vector"
+        tags: lighthouse
