--- a/ansible/8.3/site.yml
+++ b/ansible/8.3/site.yml
@@ -27,11 +27,11 @@
           - clickhouse-client-{{ clickhouse_version }}.rpm
           - clickhouse-server-{{ clickhouse_version }}.rpm
       notify: Start clickhouse service
-    - name: Create database
-      ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
-      register: create_db
-      failed_when: create_db.rc != 0 and create_db.rc !=82
-      changed_when: create_db.rc == 0
+#    - name: Create database
+#      ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
+#      register: create_db
+#      failed_when: create_db.rc != 0 and create_db.rc !=82
+#      changed_when: create_db.rc == 0
 
 - name: Install Vector
   hosts: vector
@@ -71,29 +71,40 @@
 
 - name: Install lighthouse
   hosts: lighthouse
+  handlers:
+    - name: Restart Apache
+      become: true
+      ansible.builtin.service:
+        name: httpd.service
+        state: restarted
   tasks:
-    - name: Install nginx
-        become: true
-        ansible.builtin.package:
-          name: nginx-1.18.0-0ubuntu1.4
-         state: present
-       tags: lighthouse  
+    - name: Install apache
+      become: true
+      ansible.builtin.package:
+        name: httpd.x86_64
+        state: present
+      tags: lighthouse  
 
-    - name: Download lighthouse
-        ansible.builtin.get_url: 
-          url: https://github.com/VKCOM/lighthouse/archive/refs/heads/master.zip
-          dest: "/tmp/lighthouse_master.zip"
-          mode: 0755
-          timeout: 60
-          force: true
-          validate_certs: false
-        tags: lighthouse
+    - name: Install git
+      become: true
+      ansible.builtin.package:
+        name: git
+        state: present
+      tags: lighthouse
 
-    - name: Unarchive lighthouse
-        ansible.builtin.unarchive:
-          copy: false
-          src: "https://github.com/VKCOM/lighthouse/archive/refs/heads/master.zip"
-          dest: "{{ lighthouse_home }}"
-          # extra_opts: [--strip-components=2]
-          # creates: "{{ vector_home }}/bin/vector"
-        tags: lighthouse
+    - name: Create lighthouse home dir
+      become: true
+      ansible.builtin.file: 
+        path: "{{ lighthouse_home }}"
+        state: directory
+      tags: lighthouse
+
+    - name: Clone git repo with lighthouse
+      become: true
+      ansible.builtin.git:
+        repo: "https://github.com/VKCOM/lighthouse.git"
+        dest: "{{ lighthouse_home }}"
+        force: true
+      tags: lighthouse
+      notify: Restart Apache
+
