--- a/ansible/8.4/requirements.yml
+++ b/ansible/8.4/requirements.yml
@@ -1,5 +1,17 @@
 ---
-  - src: git@github.com:AlexeySetevoi/ansible-clickhouse.git
+  - src: https://github.com/AlexeySetevoi/ansible-clickhouse.git
     scm: git
     version: "1.11.0"
     name: clickhouse 
+
+  - src: https://github.com/svinopterix/devops20-vector-role.git
+    scm: git
+    #version: "1.11.0"
+    name: vector
+    tags: vector
+
+  - src: https://github.com/svinopterix/devops20-lighthouse-role.git
+    scm: git
+    #version: "1.11.0"
+    name: lighthouse 
+    tags: lighthouse
