--- a/ansible/8.4/site.yml
+++ b/ansible/8.4/site.yml
@@ -1,110 +1,16 @@
 ---
 - name: Install Clickhouse
   hosts: clickhouse
-  handlers:
-    - name: Start clickhouse service
-      become: true
-      ansible.builtin.service:
-        name: clickhouse-server
-        state: restarted
-  tasks:
-    - block:
-        - name: Get clickhouse distrib
-          ansible.builtin.get_url:
-            url: "https://packages.clickhouse.com/rpm/stable/{{ item }}-{{ clickhouse_version }}.noarch.rpm"
-            dest: "./{{ item }}-{{ clickhouse_version }}.rpm"
-          with_items: "{{ clickhouse_packages }}"
-      rescue:
-        - name: Get clickhouse distrib
-          ansible.builtin.get_url:
-            url: "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-{{ clickhouse_version }}.x86_64.rpm"
-            dest: "./clickhouse-common-static-{{ clickhouse_version }}.rpm"
-    - name: Install clickhouse packages
-      become: true
-      ansible.builtin.yum:
-        name:
-          - clickhouse-common-static-{{ clickhouse_version }}.rpm
-          - clickhouse-client-{{ clickhouse_version }}.rpm
-          - clickhouse-server-{{ clickhouse_version }}.rpm
-      notify: Start clickhouse service
-#    - name: Create database
-#      ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
-#      register: create_db
-#      failed_when: create_db.rc != 0 and create_db.rc !=82
-#      changed_when: create_db.rc == 0
+  roles:
+    - clickhouse
 
 - name: Install Vector
   hosts: vector
-  tasks:
-    - name: Download Vector
-      ansible.builtin.get_url:
-        url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
-        dest: "/tmp/vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
-        mode: 0755
-        timeout: 60
-        force: true
-        validate_certs: false
-      register: get_vector
-      until: get_vector is succeeded
-      tags: vector
-    - name: Create vector home dir
-      become: true
-      ansible.builtin.file:
-        state: directory
-        path: "{{ vector_home }}"
-      tags: vector
-    - name: Extract vector to home dir
-      become: true
-      ansible.builtin.unarchive:
-        copy: false
-        src: "/tmp/vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
-        dest: "{{ vector_home }}"
-        extra_opts: [--strip-components=2]
-        creates: "{{ vector_home }}/bin/vector"
-      tags: vector
-    - name: Set environment Vector
-      become: true
-      ansible.builtin.template:
-        src: templates/vector.sh.j2
-        dest: /etc/profile.d/vector.sh
-      tags: vector
+  roles:
+    - vector
 
 - name: Install lighthouse
   hosts: lighthouse
-  handlers:
-    - name: Restart Apache
-      become: true
-      ansible.builtin.service:
-        name: httpd.service
-        state: restarted
-  tasks:
-    - name: Install apache
-      become: true
-      ansible.builtin.package:
-        name: httpd.x86_64
-        state: present
-      tags: lighthouse  
-
-    - name: Install git
-      become: true
-      ansible.builtin.package:
-        name: git
-        state: present
-      tags: lighthouse
-
-    - name: Create lighthouse home dir
-      become: true
-      ansible.builtin.file: 
-        path: "{{ lighthouse_home }}"
-        state: directory
-      tags: lighthouse
-
-    - name: Clone git repo with lighthouse
-      become: true
-      ansible.builtin.git:
-        repo: "https://github.com/VKCOM/lighthouse.git"
-        dest: "{{ lighthouse_home }}"
-        force: true
-      tags: lighthouse
-      notify: Restart Apache
+  roles:
+    - lighthouse
 
