first freestyle pipeline working

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-
 *.tmp
 /venv
 /.idea
 /vagrant/.vagrant
+/vagrant/*/.vagrant
 ansible/8.3/terraform/terraform.tfstate
 ansible/8.3/terraform/terraform.tfstate.backup
