--- a/hw-micro11/docker-compose.yaml
+++ b/hw-micro11/docker-compose.yaml
@@ -67,3 +67,30 @@ services:
       - storage
       - uploader
       - security
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    command: 
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    restart: unless-stopped
+    ports:
+      - "9090:9000"
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prom_data:/prometheus
+
+  graphana:
+    image: grafana/grafana
+    container_name: graphana
+    ports: 
+      - "8081:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=qwerty123456
+    volumes:
+      - ./grafana:/etc/grafana/provisioning/datasources
+
+volumes:
+  prom_data:
+  data:
