--- a/hw-micro11/docker-compose.yaml
+++ b/hw-micro11/docker-compose.yaml
@@ -4,6 +4,7 @@ volumes:
   grafana_data:
 
 services:
+  # S3 minio
   storage:
     image: minio/minio:latest
     command: server /data
@@ -35,6 +36,7 @@ services:
       exit 0;
       "
 
+  # uploader
   uploader:
     build: ./uploader
     depends_on:
@@ -50,6 +52,7 @@ services:
       S3_ACCESS_SECRET: ${Storage_Secret:-STORAGE_SECRET_KEY}
       S3_BUCKET: ${Storage_Bucket:-data}
   
+  # authenticator
   security:
     build: ./security
     expose: 
@@ -57,6 +60,7 @@ services:
     environment:
       PORT: 3000
 
+  # gateway
   gateway:
     image: nginx:alpine
     volumes:
@@ -68,6 +72,7 @@ services:
       - uploader
       - security
 
+  # prometheus
   prometheus:
     image: prom/prometheus
     container_name: prometheus
@@ -80,6 +85,7 @@ services:
       - ./prometheus:/etc/prometheus
       - prom_data:/prometheus
 
+  # grafana
   graphana:
     image: grafana/grafana
     container_name: graphana
@@ -90,6 +96,27 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=qwerty123456
     volumes:
       - ./grafana:/etc/grafana/provisioning/datasources
+
+  # elasticsearch
+  elasticsearch:
+    container_name: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
+    environment:
+      - xpack.security.enabled=false
+      - "discovery.type=single-node"
+    ports:
+      - 9200:9200
+  
+  # kibana
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:7.11.0
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+    ports:
+      - 8082:5601
 
 volumes:
   prom_data:
