--- a/hw-micro11/docker-compose.yaml
+++ b/hw-micro11/docker-compose.yaml
@@ -91,6 +91,8 @@ services:
     container_name: graphana
     ports: 
       - "8081:3000"
+    depends_on:
+      - prometheus      
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=qwerty123456
@@ -104,6 +106,8 @@ services:
     environment:
       - xpack.security.enabled=false
       - "discovery.type=single-node"
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data      
     ports:
       - 9200:9200
   
@@ -121,3 +125,4 @@ services:
 volumes:
   prom_data:
   data:
+  elasticsearch_data:
