--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /vagrant/*/.vagrant
 ansible/8.3/terraform/terraform.tfstate
 ansible/8.3/terraform/terraform.tfstate.backup
+devops20.code-workspace
